# cockroach-amqp-bridge

./: Cargo.toml  Dockerfile  LICENSE.txt  README.md  rustfmt.toml
src/: changefeed.rs  db_cursor.rs  main.rs  options.rs  publisher.rs
