[package]
name = "cockroach_amqp_bridge"
version = "0.1.0"
authors = ["xiaobin <xbinxu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
async-std = { version = "1.7", features = ["attributes"] }
futures = "0.3"
sqlx = { version = "0.4.1", features = [
  "runtime-async-std-native-tls",
  "postgres",
  "chrono",
  "macros",
  "json"
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
either = "1.6"
lapin = { version = "1.5", features = ["codegen"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.8"
futures-channel = { version = "0.3" }
smol_str = { version = "0.1", features = ["serde"] }
envy = "0.4"
async-ctrlc = "1.2"
dotenv = "0.15"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.3"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = 'thin'
